# kMC_CO_oxidation

./: .gitignore  README.md  main.py  pyproject.toml  pyproject.toml.old  submit_coexistence_sge.sh  submit_kmc_sge.sh  submit_sweep_job.sh
src/co_oxidation/: __init__.py  cli.py  common.py  kmc.py  memkm.py  plotting.py
src/co_oxidation/memkm/: backend.py  coexistence.py  model.py
src/kmc_co_oxidation/: __init__.py  kmc.py
sweeps/: _common.py  linear.py  mpi.py  plotting.py
tests/: test_bistability.py  test_kmc.py
tests/support/: meanfield.py  plot.py
