[project]
name = "co-oxidation"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "me-mkm",
    "numba>=0.66.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scipy>=1.18.0",
]

[project.optional-dependencies]
mpi = [
    "mpi4py>=4.1.2",
    "petsc4py==3.25.3",
    "slepc4py==3.25.1",
]
tt = [
    "scikit-tt",
]

[dependency-groups]
dev = [
    "notebook>=7.6.0",
    "pandas>=3.0.3",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/co_oxidation"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv.sources]
me-mkm = { git = "https://github.com/farinc/me-mkm-tiling.git", branch = "main" }
scikit-tt = { git = "https://github.com/PGelss/scikit_tt" }

[tool.uv]
# Suppress the PyPI packages that build complete native PETSc/SLEPc copies.
# PETSC_DIR and SLEPC_DIR point to the cluster installations instead.
override-dependencies = [
    "petsc ; sys_platform == 'never'",
    "slepc ; sys_platform == 'never'",
]

[tool.uv.extra-build-dependencies]
# slepc4py needs the petsc4py .pxd headers during Cython compilation.
slepc4py = [
    "petsc4py==3.25.3",
]
