[project]
name = "co-oxidation"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "me-mkm",
    "numba>=0.66.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scipy>=1.18.0",
]

[project.optional-dependencies]
mpi = [
    "cython>=3",
    "setuptools",
    "mpi4py>=4.1.2",
]
native-petsc = [
    "co-oxidation[mpi]",
    "petsc4py==3.25.3",
]
native-slepc = [
    "co-oxidation[mpi]",
    "petsc4py==3.25.3",
    "slepc4py==3.25.1",
]
source-petsc = [
    "co-oxidation[mpi]",
    "petsc==3.25.3",
    "petsc4py==3.25.3",
]
source-slepc = [
    "co-oxidation[mpi]",
    "petsc==3.25.3",
    "petsc4py==3.25.3",
    "slepc==3.25.1",
    "slepc4py==3.25.1",
]
tt = [
    "scikit-tt",
]

[dependency-groups]
dev = [
    "notebook>=7.6.0",
    "pandas>=3.0.3",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/co_oxidation"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
me-mkm = { git = "https://github.com/farinc/me-mkm-tiling.git", branch = "main" }
scikit-tt = { git = "https://github.com/PGelss/scikit_tt" }

[tool.uv]
no-build-isolation-package = [
    "petsc4py",
    "slepc4py",
]
conflicts = [
    [
        { extra = "native-petsc" },
        { extra = "source-petsc" },
    ],
    [
        { extra = "native-slepc" },
        { extra = "source-slepc" },
    ],
]

[[tool.uv.dependency-metadata]]
name = "petsc4py"
version = "3.25.3"
requires-dist = ["numpy"]

[[tool.uv.dependency-metadata]]
name = "slepc4py"
version = "3.25.1"
requires-dist = ["numpy", "petsc4py"]

[[tool.uv.dependency-metadata]]
name = "petsc"
version = "3.25.3"
requires-dist = []

[[tool.uv.dependency-metadata]]
name = "slepc"
version = "3.25.1"
requires-dist = ["petsc"]
